--- a/lashaDaZura/index.html
+++ b/lashaDaZura/index.html
@@ -36,8 +36,18 @@
     </nav>
 </header>
 
+<div class="ragaca">
+
+</div>
+
+
+<button id="btn">
+    Click Me
+</button>
 
 <!--<img src="https://pixlr.com/images/index/remove-bg.webp" alt="#">-->
+
+<script src="app.js"></script>
 
 </body>
 </html>
