--- a/ptjk/index.html
+++ b/ptjk/index.html
@@ -25,17 +25,18 @@
             </ul>
         </nav>
     </header>
-
+<main class="main">
     <section class="topSectionWrapper">
         <div class="imageSide">
             <div class="textInsideWrapper">
                 <div class="worldNews">
-                    <h5 >WORLD NEWS</h5>
+                    <h5>WORLD NEWS</h5>
                 </div>
                 <div class="amazing_places">
                     <h3>Amazing places in America to visit</h3>
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Blanditiis consequuntur cumque dolores eligendi excepturi </div>
+                        Blanditiis consequuntur cumque dolores eligendi excepturi
+                    </div>
                 </div>
                 <div>
                     <button class="btn">LEARN MORE</button>
@@ -74,6 +75,56 @@
             </div>
         </div>
     </section>
+
+    <section class="contentWrapper">
+        <div class="trendingWrapper">
+            <div>
+                <h2 class="title">
+                    Trending
+                </h2>
+            </div>
+            <div class="trendingBoxes">
+                <div class="box">
+                    <div class="imageBox">
+                        <img src="./assets/carlos.png" alt="#">
+                    </div>
+                    <div class="textBox">
+                        <b>Dolore magna aliqua</b>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga fugiat laborum mollitia optio repudiandae rerum velit!
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="imageBox">
+                        <img src="./assets/carlos-hevia-62.png" alt="#">
+                    </div>
+                    <div class="textBox">
+                        <b>Dolore magna aliqua</b>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga fugiat laborum mollitia optio repudiandae rerum velit!
+                        </p>
+                    </div>
+                </div>
+                <div class="box">
+                    <div class="imageBox">
+                        <img src="./assets/annie-spratt-21.png" alt="#">
+                    </div>
+                    <div class="textBox">
+                        <b>Dolore magna aliqua</b>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga fugiat laborum mollitia optio repudiandae rerum velit!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="happeningNow">
+
+        </div>
+    </section>
+</main>
+
 </div>
 
 
